# shellenv

./: Makefile  PROJECT.md  README.md  pyproject.toml  shell-trace-run
.cursor/rules/: issue-tracker-kanban.mdc
.github/workflows/: ci.yml
config/: shellctl.global.defaults.toml  shellenv.global.defaults.toml
libexec/: refresh-shelltree.py  validate-discovery.py
patches/: README.md  bash-sourcetrace.patch  tcsh-TCSH_XTRACEFD.patch  tcsh-closem-preserve-xtracefd.patch
src/env_config/: __init__.py  cli.py  config.py  detect_shell.py  discover.py  trace.py  tui.py
src/shellctl/: __init__.py  backup.py  cli.py  compose.py  config.py  discover.py  trace.py  tui.py
src/shellenv/: backup.py  cli.py  compose.py  config.py  detect_shell.py  modes.py  repo_init.py  tui.py
tests/: test_backup.py  test_compose.py  test_config.py  test_config_cli.py  test_config_editor.py  test_config_getset.py  test_config_schema.py  test_detect_shell.py  test_discover.py  test_discover_existing_filter.py  test_discover_modes.py  test_discover_shell_trace.py  test_discover_strace_parse.py  test_modes.py  test_repo_init.py  test_trace_mock.py  test_trace_parser.py  test_tui_actions.py  test_tui_backup_restore.py
tests/fixtures/traces/: bash_login_noninteractive.txt  tcsh_login_noninteractive.txt  zsh_login_noninteractive.txt
