[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-config"
version = "0.1.0"
description = "Tool to manage shell environment startup files"
authors = [ { name = "Michael Rice", email = "michael@riceclan.org" } ]
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
