[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellenv"
version = "0.1.0"
description = "Tool to manage shell environment startup files"
authors = [ { name = "Michael Rice", email = "michael@riceclan.org" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=7.1.0",
    "tabulate>=0.9.0",
    "tomli-w",
]

[project.scripts]
shellenv = "shellenv.cli:_entry"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=html"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff==0.15.7",
]
